// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Charts/LineChart Humidity Once A Day 1`] = `
<div
  className="bg-white"
  style={
    Object {
      "height": 300,
      "width": 600,
    }
  }
>
  <div
    style={
      Object {
        "height": "inherit",
        "position": "relative",
        "width": "inherit",
      }
    }
  >
    <div>
      <svg
        className="overflow-visible"
        height={300}
        width={600}
      >
        <g
          className="visx-group visx-rows"
          transform="translate(64, 32)"
        >
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={188}
            y2={188}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={143.23809523809524}
            y2={143.23809523809524}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={98.47619047619048}
            y2={98.47619047619048}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={53.71428571428571}
            y2={53.71428571428571}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={8.952380952380963}
            y2={8.952380952380963}
          />
        </g>
        <g
          className="visx-group visx-axis visx-axis-bottom"
          transform="translate(64, 232)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={83.02583333333334}
              x2={83.02583333333334}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={83.02583333333334}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={83.02583333333334}
                >
                  Apr 11
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={183.82583333333335}
              x2={183.82583333333335}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={183.82583333333335}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={183.82583333333335}
                >
                  Mon 12
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={284.62583333333333}
              x2={284.62583333333333}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={284.62583333333333}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={284.62583333333333}
                >
                  Tue 13
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={385.42583333333334}
              x2={385.42583333333334}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={385.42583333333334}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={385.42583333333334}
                >
                  Wed 14
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={486.22583333333336}
              x2={486.22583333333336}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={486.22583333333336}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={486.22583333333336}
                >
                  Thu 15
                </tspan>
              </text>
            </svg>
          </g>
          <svg
            fontSize={10}
            style={
              Object {
                "overflow": "visible",
              }
            }
            x={0}
            y={0}
          >
            <text
              className="visx-axis-label font-bold"
              fill="#222"
              fontFamily="Arial"
              fontSize={10}
              textAnchor="middle"
              x={252}
              y={52}
            >
              <tspan
                dy="0em"
                x={252}
              >
                Messdatum
              </tspan>
            </text>
          </svg>
        </g>
        <g
          className="visx-group visx-axis visx-axis-left"
          transform="translate(64, 32)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={188}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  0
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={143.23809523809524}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  20
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={98.47619047619048}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  40
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={53.71428571428571}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  60
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={8.952380952380963}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  80
                </tspan>
              </text>
            </svg>
          </g>
          <svg
            fontSize={10}
            style={
              Object {
                "overflow": "visible",
              }
            }
            x={0}
            y={0}
          >
            <text
              className="visx-axis-label font-bold"
              fill="#222"
              fontFamily="Arial"
              fontSize={10}
              textAnchor="middle"
              transform="rotate(-90)"
              x={-94}
              y={-32}
            >
              <tspan
                dy="0em"
                x={-94}
              >
                %
              </tspan>
            </text>
          </svg>
        </g>
        <g
          className="visx-group"
          transform="translate(64, 32)"
        >
          <path
            className="visx-linepath css-lsicnm-LinePath"
            d="M0,31.333333333333325L100.80000000000001,64.9047619047619L201.60000000000002,51.47619047619048L302.4,82.80952380952381L403.20000000000005,35.80952380952381L504,73.85714285714286"
            fill="transparent"
            strokeLinecap="round"
          />
        </g>
        <rect
          className="visx-bar"
          fill="transparent"
          height={188}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rx={14}
          width={504}
          x={64}
          y={32}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Charts/LineChart Paxcounter Throughout Day 1`] = `
<div
  className="bg-white"
  style={
    Object {
      "height": 300,
      "width": 600,
    }
  }
>
  <div
    style={
      Object {
        "height": "inherit",
        "position": "relative",
        "width": "inherit",
      }
    }
  >
    <div>
      <svg
        className="overflow-visible"
        height={300}
        width={600}
      >
        <g
          className="visx-group visx-rows"
          transform="translate(64, 32)"
        >
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={188}
            y2={188}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={156.72920825016635}
            y2={156.72920825016635}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={125.45841650033266}
            y2={125.45841650033266}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={94.18762475049898}
            y2={94.18762475049898}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={62.91683300066533}
            y2={62.91683300066533}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={31.64604125083165}
            y2={31.64604125083165}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={0.37524950099799304}
            y2={0.37524950099799304}
          />
        </g>
        <g
          className="visx-group visx-axis visx-axis-bottom"
          transform="translate(64, 232)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={64.02348484848484}
              x2={64.02348484848484}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={64.02348484848484}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={64.02348484848484}
                >
                  Apr 11
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={155.65984848484848}
              x2={155.65984848484848}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={155.65984848484848}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={155.65984848484848}
                >
                  Mon 12
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={247.29621212121214}
              x2={247.29621212121214}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={247.29621212121214}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={247.29621212121214}
                >
                  Tue 13
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={338.9325757575757}
              x2={338.9325757575757}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={338.9325757575757}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={338.9325757575757}
                >
                  Wed 14
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={430.5689393939394}
              x2={430.5689393939394}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={430.5689393939394}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={430.5689393939394}
                >
                  Thu 15
                </tspan>
              </text>
            </svg>
          </g>
          <svg
            fontSize={10}
            style={
              Object {
                "overflow": "visible",
              }
            }
            x={0}
            y={0}
          >
            <text
              className="visx-axis-label font-bold"
              fill="#222"
              fontFamily="Arial"
              fontSize={10}
              textAnchor="middle"
              x={252}
              y={52}
            >
              <tspan
                dy="0em"
                x={252}
              >
                Messdatum
              </tspan>
            </text>
          </svg>
        </g>
        <g
          className="visx-group visx-axis visx-axis-left"
          transform="translate(64, 32)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={188}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  0
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={156.72920825016635}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  200
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={125.45841650033266}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  400
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={94.18762475049898}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  600
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={62.91683300066533}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  800
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={31.64604125083165}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  1,000
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={0.37524950099799304}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  1,200
                </tspan>
              </text>
            </svg>
          </g>
          <svg
            fontSize={10}
            style={
              Object {
                "overflow": "visible",
              }
            }
            x={0}
            y={0}
          >
            <text
              className="visx-axis-label font-bold"
              fill="#222"
              fontFamily="Arial"
              fontSize={10}
              textAnchor="middle"
              transform="rotate(-90)"
              x={-94}
              y={-32}
            >
              <tspan
                dy="0em"
                x={-94}
              >
                Anzahl an Personen
              </tspan>
            </text>
          </svg>
        </g>
        <g
          className="visx-group"
          transform="translate(64, 32)"
        >
          <path
            className="visx-linepath css-lsicnm-LinePath"
            d="M0,180.33865602129075L95.45454545454545,158.44910179640718L190.9090909090909,64.48037258815701L313.09090909090907,172.36460412508316L408.5454545454545,31.333333333333307L504,140.1556886227545"
            fill="transparent"
            strokeLinecap="round"
          />
        </g>
        <rect
          className="visx-bar"
          fill="transparent"
          height={188}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rx={14}
          width={504}
          x={64}
          y={32}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Charts/LineChart Temperature Throughout Day 1`] = `
<div
  className="bg-white"
  style={
    Object {
      "height": 300,
      "width": 600,
    }
  }
>
  <div
    style={
      Object {
        "height": "inherit",
        "position": "relative",
        "width": "inherit",
      }
    }
  >
    <div>
      <svg
        className="overflow-visible"
        height={300}
        width={600}
      >
        <g
          className="visx-group visx-rows"
          transform="translate(64, 32)"
        >
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={188}
            y2={188}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={153.33923303834808}
            y2={153.33923303834808}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={118.67846607669617}
            y2={118.67846607669617}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={84.01769911504425}
            y2={84.01769911504425}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={49.356932153392336}
            y2={49.356932153392336}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={14.696165191740421}
            y2={14.696165191740421}
          />
        </g>
        <g
          className="visx-group visx-axis visx-axis-bottom"
          transform="translate(64, 232)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={54.00242407918658}
              x2={54.00242407918658}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={54.00242407918658}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={54.00242407918658}
                >
                  06 AM
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={145.63261733216618}
              x2={145.63261733216618}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={145.63261733216618}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={145.63261733216618}
                >
                  09 AM
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={237.26281058514576}
              x2={237.26281058514576}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={237.26281058514576}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={237.26281058514576}
                >
                  12 PM
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={328.8930038381254}
              x2={328.8930038381254}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={328.8930038381254}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={328.8930038381254}
                >
                  03 PM
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={420.523197091105}
              x2={420.523197091105}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={420.523197091105}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={420.523197091105}
                >
                  06 PM
                </tspan>
              </text>
            </svg>
          </g>
          <svg
            fontSize={10}
            style={
              Object {
                "overflow": "visible",
              }
            }
            x={0}
            y={0}
          >
            <text
              className="visx-axis-label font-bold"
              fill="#222"
              fontFamily="Arial"
              fontSize={10}
              textAnchor="middle"
              x={252}
              y={52}
            >
              <tspan
                dy="0em"
                x={252}
              >
                Messdatum
              </tspan>
            </text>
          </svg>
        </g>
        <g
          className="visx-group visx-axis visx-axis-left"
          transform="translate(64, 32)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={188}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  0
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={153.33923303834808}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  5
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={118.67846607669617}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  10
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={84.01769911504425}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  15
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={49.356932153392336}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  20
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={14.696165191740421}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  25
                </tspan>
              </text>
            </svg>
          </g>
          <svg
            fontSize={10}
            style={
              Object {
                "overflow": "visible",
              }
            }
            x={0}
            y={0}
          >
            <text
              className="visx-axis-label font-bold"
              fill="#222"
              fontFamily="Arial"
              fontSize={10}
              textAnchor="middle"
              transform="rotate(-90)"
              x={-94}
              y={-32}
            >
              <tspan
                dy="0em"
                x={-94}
              >
                °C
              </tspan>
            </text>
          </svg>
        </g>
        <g
          className="visx-group"
          transform="translate(64, 32)"
        >
          <path
            className="visx-linepath css-lsicnm-LinePath"
            d="M0,91.64306784660766L136.9871389132045,46.58407079646019L278.8272843579557,59.06194690265485L394.6461517742913,43.11799410029499L504,31.333333333333325"
            fill="transparent"
            strokeLinecap="round"
          />
        </g>
        <rect
          className="visx-bar"
          fill="transparent"
          height={188}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rx={14}
          width={504}
          x={64}
          y={32}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Charts/LineChart Values Without Supplied Unit 1`] = `
<div
  className="bg-white"
  style={
    Object {
      "height": 300,
      "width": 600,
    }
  }
>
  <div
    style={
      Object {
        "height": "inherit",
        "position": "relative",
        "width": "inherit",
      }
    }
  >
    <div>
      <svg
        className="overflow-visible"
        height={300}
        width={600}
      >
        <g
          className="visx-group visx-rows"
          transform="translate(64, 32)"
        >
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={188}
            y2={188}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={143.23809523809524}
            y2={143.23809523809524}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={98.47619047619048}
            y2={98.47619047619048}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={53.71428571428571}
            y2={53.71428571428571}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={8.952380952380963}
            y2={8.952380952380963}
          />
        </g>
        <g
          className="visx-group visx-axis visx-axis-bottom"
          transform="translate(64, 232)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={83.02583333333334}
              x2={83.02583333333334}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={83.02583333333334}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={83.02583333333334}
                >
                  Apr 11
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={183.82583333333335}
              x2={183.82583333333335}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={183.82583333333335}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={183.82583333333335}
                >
                  Mon 12
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={284.62583333333333}
              x2={284.62583333333333}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={284.62583333333333}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={284.62583333333333}
                >
                  Tue 13
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={385.42583333333334}
              x2={385.42583333333334}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={385.42583333333334}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={385.42583333333334}
                >
                  Wed 14
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#E7EAF2"
              strokeLinecap="square"
              x1={486.22583333333336}
              x2={486.22583333333336}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="middle"
                transform=""
                x={486.22583333333336}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={486.22583333333336}
                >
                  Thu 15
                </tspan>
              </text>
            </svg>
          </g>
          
        </g>
        <g
          className="visx-group visx-axis visx-axis-left"
          transform="translate(64, 32)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={188}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  0
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={143.23809523809524}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  20
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={98.47619047619048}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  40
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={53.71428571428571}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  60
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={10}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x="-0.25em"
              y="0.25em"
            >
              <text
                fill="#222"
                fontFamily="Arial"
                fontSize={10}
                textAnchor="end"
                transform=""
                x={-8}
                y={8.952380952380963}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  80
                </tspan>
              </text>
            </svg>
          </g>
          
        </g>
        <g
          className="visx-group"
          transform="translate(64, 32)"
        >
          <path
            className="visx-linepath css-lsicnm-LinePath"
            d="M0,31.333333333333325L100.80000000000001,64.9047619047619L201.60000000000002,51.47619047619048L302.4,82.80952380952381L403.20000000000005,35.80952380952381L504,73.85714285714286"
            fill="transparent"
            strokeLinecap="round"
          />
        </g>
        <rect
          className="visx-bar"
          fill="transparent"
          height={188}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rx={14}
          width={504}
          x={64}
          y={32}
        />
      </svg>
    </div>
  </div>
</div>
`;
